tests/fail/fail-assign4.mc
int main() {
  return (0 = 1); /* Error: cannot assign to an int */
}
